--- a/.github/workflows/build-emsdk.yml
+++ b/.github/workflows/build-emsdk.yml
@@ -27,6 +27,8 @@ jobs:
           pip install -r requirements.txt
           pip install pygbag
           git clone https://github.com/emscripten-core/emsdk.git
+          git clone https://github.com/pygame-web/pygbag.git
+          git clone https://pygame-web.github.io/archives/0.9/pythonrc.py
 
       # Rimuovi o modifica questa parte se non hai bisogno di scaricare pythonrc.py
       - name: Create game assets directory
